[gd_scene load_steps=7 format=3 uid="uid://cr3p2n6unaoe5"]

[ext_resource type="Script" path="res://scenes/enemies/test/test_enemy_1_bullet.gd" id="1_aotuf"]
[ext_resource type="Script" path="res://scripts/fps_system/hitbox_component.gd" id="2_0sm6v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_81n7f"]
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_foa03"]
transparency = 1
blend_mode = 1
cull_mode = 2
albedo_color = Color(0.741176, 0, 0, 0.615686)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3c1kd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2mqsq"]
radius = 0.1
height = 1.0

[node name="TestEnemy1Bullet" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_aotuf")
INITIAL_SPEED = 30.0
ACCELERATION = -1.0
DRAG = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_81n7f")

[node name="Model" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model"]
transform = Transform3D(0.2, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_foa03")
mesh = SubResource("CapsuleMesh_3c1kd")

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4096
script = ExtResource("2_0sm6v")
target_types = 1
DAMAGE = 10.0
LIFESPAN = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_2mqsq")

[connection signal="after_hurtbox_hit" from="HitboxComponent" to="." method="_on_hitbox_after_hurtbox_hit"]
[connection signal="lifetime_expired" from="HitboxComponent" to="." method="queue_free"]
